// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single text chunk can annotate with slice over two block splits 1`] = `
"<>
  <0>
    "abcdefgh" {}
    "ij" { BOLD = [ !u ] }
  <p>
    "klmn" { BOLD = [ !u ] }
  <p>
    "opqrstu" { BOLD = [ !u ] }
    "vwxyz" {}
"
`;

exports[`single text chunk can insert at the beginning of text 1`] = `
"<>
  <p> { foo = "bar" }
    "abcdefghijklmnopqrstuvwxyz" {}
"
`;

exports[`single text chunk can insert at the end of text 1`] = `
"<>
  <0>
    "abcdefghijklmnopqrstuvwxyz" {}
  <unfurl> { link = "foobar" }
"
`;

exports[`single text chunk can insert marker in the middle of text 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p> { foo = "bar" }
    "klmnopqrstuvwxyz" {}
"
`;

exports[`single text chunk can insert two blocks 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p>
    "klmnopqrst" {}
  <p>
    "uvwxyz" {}
"
`;

exports[`single text chunk can split text after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "klmno" {}
  <paragraph>
    "pqrstuvwxyz" {}
"
`;

exports[`single text chunk can split text before slice 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <paragraph>
    "klmno" {}
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`single text chunk can split text in the middle of a slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
  <paragraph>
    "klmno" { BOLD = [ !u ] }
    "pqrstuvwxyz" {}
"
`;

exports[`single text chunk can split text right after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "" {}
  <paragraph>
    "klmnopqrstuvwxyz" {}
"
`;

exports[`single text chunk can split text right before slice 1`] = `
"<>
  <0>
    "abcdefghijklmno" {}
  <paragraph>
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`single text chunk nested block data - 2 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
  <ul> { type = "tasks" }
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;

exports[`single text chunk nested block data 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;

exports[`text with block split can annotate with slice over two block splits 1`] = `
"<>
  <0>
    "abcdefgh" {}
    "ij" { BOLD = [ !u ] }
  <p>
    "klmn" { BOLD = [ !u ] }
  <p>
    "opqrstu" { BOLD = [ !u ] }
    "vwxyz" {}
"
`;

exports[`text with block split can insert at the beginning of text 1`] = `
"<>
  <p> { foo = "bar" }
    "abcdefghijklmnopqrstuvwxyz" {}
"
`;

exports[`text with block split can insert at the end of text 1`] = `
"<>
  <0>
    "abcdefghijklmnopqrstuvwxyz" {}
  <unfurl> { link = "foobar" }
"
`;

exports[`text with block split can insert marker in the middle of text 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p> { foo = "bar" }
    "klmnopqrstuvwxyz" {}
"
`;

exports[`text with block split can insert two blocks 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p>
    "klmnopqrst" {}
  <p>
    "uvwxyz" {}
"
`;

exports[`text with block split can split text after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "klmno" {}
  <paragraph>
    "pqrstuvwxyz" {}
"
`;

exports[`text with block split can split text before slice 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <paragraph>
    "klmno" {}
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`text with block split can split text in the middle of a slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
  <paragraph>
    "klmno" { BOLD = [ !u ] }
    "pqrstuvwxyz" {}
"
`;

exports[`text with block split can split text right after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "" {}
  <paragraph>
    "klmnopqrstuvwxyz" {}
"
`;

exports[`text with block split can split text right before slice 1`] = `
"<>
  <0>
    "abcdefghijklmno" {}
  <paragraph>
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`text with block split nested block data - 2 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
  <ul> { type = "tasks" }
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;

exports[`text with block split nested block data 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;

exports[`text with deletes can annotate with slice over two block splits 1`] = `
"<>
  <0>
    "abcdefgh" {}
    "ij" { BOLD = [ !u ] }
  <p>
    "klmn" { BOLD = [ !u ] }
  <p>
    "opqrstu" { BOLD = [ !u ] }
    "vwxyz" {}
"
`;

exports[`text with deletes can insert at the beginning of text 1`] = `
"<>
  <p> { foo = "bar" }
    "abcdefghijklmnopqrstuvwxyz" {}
"
`;

exports[`text with deletes can insert at the end of text 1`] = `
"<>
  <0>
    "abcdefghijklmnopqrstuvwxyz" {}
  <unfurl> { link = "foobar" }
"
`;

exports[`text with deletes can insert marker in the middle of text 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p> { foo = "bar" }
    "klmnopqrstuvwxyz" {}
"
`;

exports[`text with deletes can insert two blocks 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p>
    "klmnopqrst" {}
  <p>
    "uvwxyz" {}
"
`;

exports[`text with deletes can split text after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "klmno" {}
  <paragraph>
    "pqrstuvwxyz" {}
"
`;

exports[`text with deletes can split text before slice 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <paragraph>
    "klmno" {}
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`text with deletes can split text in the middle of a slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
  <paragraph>
    "klmno" { BOLD = [ !u ] }
    "pqrstuvwxyz" {}
"
`;

exports[`text with deletes can split text right after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "" {}
  <paragraph>
    "klmnopqrstuvwxyz" {}
"
`;

exports[`text with deletes can split text right before slice 1`] = `
"<>
  <0>
    "abcdefghijklmno" {}
  <paragraph>
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`text with deletes nested block data - 2 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
  <ul> { type = "tasks" }
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;

exports[`text with deletes nested block data 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;

exports[`two text chunks can annotate with slice over two block splits 1`] = `
"<>
  <0>
    "abcdefgh" {}
    "ij" { BOLD = [ !u ] }
  <p>
    "klmn" { BOLD = [ !u ] }
  <p>
    "opqrstu" { BOLD = [ !u ] }
    "vwxyz" {}
"
`;

exports[`two text chunks can insert at the beginning of text 1`] = `
"<>
  <p> { foo = "bar" }
    "abcdefghijklmnopqrstuvwxyz" {}
"
`;

exports[`two text chunks can insert at the end of text 1`] = `
"<>
  <0>
    "abcdefghijklmnopqrstuvwxyz" {}
  <unfurl> { link = "foobar" }
"
`;

exports[`two text chunks can insert marker in the middle of text 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p> { foo = "bar" }
    "klmnopqrstuvwxyz" {}
"
`;

exports[`two text chunks can insert two blocks 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <p>
    "klmnopqrst" {}
  <p>
    "uvwxyz" {}
"
`;

exports[`two text chunks can split text after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "klmno" {}
  <paragraph>
    "pqrstuvwxyz" {}
"
`;

exports[`two text chunks can split text before slice 1`] = `
"<>
  <0>
    "abcdefghij" {}
  <paragraph>
    "klmno" {}
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`two text chunks can split text in the middle of a slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
  <paragraph>
    "klmno" { BOLD = [ !u ] }
    "pqrstuvwxyz" {}
"
`;

exports[`two text chunks can split text right after slice 1`] = `
"<>
  <0>
    "abcde" {}
    "fghij" { BOLD = [ !u ] }
    "" {}
  <paragraph>
    "klmnopqrstuvwxyz" {}
"
`;

exports[`two text chunks can split text right before slice 1`] = `
"<>
  <0>
    "abcdefghijklmno" {}
  <paragraph>
    "pqrst" { BOLD = [ !u ] }
    "uvwxyz" {}
"
`;

exports[`two text chunks nested block data - 2 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
  <ul> { type = "tasks" }
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;

exports[`two text chunks nested block data 1`] = `
"<>
  <0>
    "abcde" {}
  <ul> { type = "tasks" }
    <li> { completed = !f }
      "fghi" {}
    <li> { completed = !t }
      "jklmnopqrstuvwxyz" {}
"
`;
